# NFTIK

./: .gitignore  Anchor.toml  Cargo.toml  package-lock.json  package.json
front-end/: anchor.json  next.config.js  next.config.ts  package-lock.json  package.json
front-end/.next/: app-build-manifest.json  trace
front-end/.next/cache/: .rscinfo
front-end/.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json
front-end/.next/server/app/: page.js  page_client-reference-manifest.js
front-end/.next/server/chunks/: [root-of-the-server]__48b32c58._.js.map  node_modules_next_229848ed._.js.map
front-end/.next/static/chunks/: [root-of-the-server]__527cd323._.js  [root-of-the-server]__527cd323._.js.map  [root-of-the-server]__ec07ee34._.js  [root-of-the-server]__ec07ee34._.js.map  _37c48c62._.js  _37c48c62._.js.map  _69253213._.js  _69253213._.js.map  _6cfb389f._.js  _6cfb389f._.js.map  _a56d98a1._.css  _a56d98a1._.css.map  _a8da5246._.js  _a8da5246._.js.map  node_modules_2e6cf6a4._.js  node_modules_633da600._.js  node_modules_633da600._.js.map  node_modules_8a824654._.js  node_modules_8a824654._.js.map  node_modules_9033b56f._.js  node_modules_9033b56f._.js.map  node_modules_@coral-xyz_anchor_dist_browser_index_c38f524d.js  node_modules_@noble_3142f630._.js  (+76 more)
front-end/public/idl/: ticketing-clean.json
front-end/src/app/: layout.tsx
front-end/src/components/: CreateEntityPage.tsx
front-end/src/idl/: ticketing.json
programs/nf-tickets/: Cargo.toml
programs/nf-tickets/src/: lib.rs
tests/: nf-tickets.ts
(+71 files in other folders)
