[package]
name = "nf-tickets"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
idl-build = [
"anchor-lang/idl-build",
"anchor-spl/idl-build",
]

default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl  = "0.30.1"